--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
+    android:label="@string/title_home"
     app:startDestination="@+id/navigation_home">
 
     <fragment
@@ -13,13 +14,13 @@
 
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="br.ucsal.medicaapp.ui.dashboard.DashboardFragment"
+        android:name="br.ucsal.medicaapp.ui.addMed.AddMedFragment"
         android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        tools:layout="@layout/fragment_add_med" />
 
     <fragment
         android:id="@+id/navigation_notifications"
-        android:name="br.ucsal.medicaapp.ui.notifications.NotificationsFragment"
+        android:name="br.ucsal.medicaapp.ui.listMedReminder.ListMedReminderFragment"
         android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        tools:layout="@layout/fragment_not_med" />
 </navigation>
